<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/booking_go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_revert"
        android:onClick="onClickGoBack"
        android:scaleX="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/signup_activity_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:width="220dp"
        android:background="@color/blue"
        android:onClick="onClickBooking"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/book_room_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/booking_end_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@drawable/drawable_back"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/end_date_hint"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/signup_activity_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/booking_start_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/drawable_back"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/start_date_hint"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/booking_end_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/booking_beds_count_select"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:entries="@array/beds_count_spinner_items"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/booking_start_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/booking_beds_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/beds_count_label"
        app:layout_constraintBottom_toTopOf="@+id/booking_beds_count_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/booking_room_type_label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/room_type_label"
        app:layout_constraintBottom_toTopOf="@+id/booking_room_type_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/booking_end_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/end_date_label"
        app:layout_constraintBottom_toTopOf="@+id/booking_end_date_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/booking_start_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/start_date_label"
        app:layout_constraintBottom_toTopOf="@+id/booking_start_date_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/booking_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/booking_activity_header"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/booking_room_type_label3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <Spinner
        android:id="@+id/booking_room_type_select"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:entries="@array/room_type_spinner_items"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/booking_beds_count_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>