<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signup_surname_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/signup_firstname_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_surname_field"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/signup_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/signup_activity_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_field"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/signup_first_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/signup_phone_number_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_firstname_field"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/signup_firstname_field"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:width="260dp"
        android:autofillHints=""
        android:background="@drawable/drawable_back"
        android:ems="10"
        android:hint="@string/firstname_hint"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_phone_number_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signup_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:width="260dp"
        android:autofillHints=""
        android:background="@drawable/drawable_back"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_activity_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:width="220dp"
        android:background="@color/blue"
        android:onClick="onClickSignup"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/signup_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signup_phone_number_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:width="260dp"
        android:autofillHints=""
        android:background="@drawable/drawable_back"
        android:ems="10"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/password_label"
        app:layout_constraintBottom_toTopOf="@+id/signup_password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/phone_number_label"
        app:layout_constraintBottom_toTopOf="@+id/signup_phone_number_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_firstname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/firstname_label"
        app:layout_constraintBottom_toTopOf="@+id/signup_firstname_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/surname_label"
        app:layout_constraintBottom_toTopOf="@+id/signup_surname_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_phone_number_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/signup_password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_phone_number_field"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/signup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="45dp"
        android:text="@string/signup_activity_header"
        android:textSize="65sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_surname_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <EditText
        android:id="@+id/signup_surname_field"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:width="260dp"
        android:autofillHints=""
        android:background="@drawable/drawable_back"
        android:ems="10"
        android:hint="@string/surname_hint"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_firstname_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup_go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_revert"
        android:onClick="onClickGoBack"
        android:scaleX="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>