<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:width="260dp"
        android:background="@color/blue"
        android:onClick="onClickLogin"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/login_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/signup_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:width="260dp"
        android:background="@color/blue"
        android:onClick="onClickSignup"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/signup_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/signup_button" />

    <ImageView
        android:id="@+id/start_logo"
        android:layout_width="308dp"
        android:layout_height="297dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />

</androidx.constraintlayout.widget.ConstraintLayout>